--- a/index.html
+++ b/index.html
@@ -1,19 +1,41 @@
-<!doctype html>
+<!DOCTYPE html>
 
 <head>
-	<meta charset="utf-8">
-	<script>
-		// TODO: create a handler
-    window.addEventListener("load", function(){
-        // TODO: register the handler
+  <meta charset="utf-8" />
+  <script>
+    window.addEventListener("load", function () {
+      let actionUrlMap = {
+        google: "https://www.google.com/search",
+        duckDuckGo: "https://duckduckgo.com/",
+        bing: "	https://www.bing.com/search",
+        ask: "https://www.ask.com/web",
+      };
+
+      let form = document.getElementById("searchForm");
+
+      function setSearchEngine(event) {
+        let actionUrl = "";
+        let selectedRadioE1 = document.querySelector(
+          "input[name=engine]:checked"
+        );
+        actionUrl = actionUrlMap[selectedRadioE1.value];
+        form.setAttribute("action", actionUrl);
+      }
+
+      form.addEventListener("submit", setSearchEngine);
     });
-	</script>
+  </script>
 </head>
 
 <body>
-
-	<form id="searchForm">
-    <!-- TODO: add form elements -->
-	</form>
-
+  <form id="searchForm">
+    <input type="text" name="q" />
+    <label><input type="radio" name="engine" value="google" /> Google</label>
+    <label
+      ><input type="radio" name="engine" value="duckDuckGo" /> DuckDuckGo</label
+    >
+    <label><input type="radio" name="engine" value="bing" /> Bing</label>
+    <label><input type="radio" name="engine" value="ask" /> Ask</label>
+    <button>Go!</button>
+  </form>
 </body>
